feat: use picoli library for CLI parser
- Improve consistency in CLI syntax
- Better error handlings
- Remove old converters
- Store CLI parameters value as RuntimePreference
- Refactor CLI argument handling with `constructGuiArgs` method
- Introduce `Parameters.constructGuiArgs` to streamline GUI argument generation, replacing inline logic for constructing command arguments.
  This enhances readability and maintainability by centralizing the argument construction logic.
- Refactor console translate tests and improve CLI parameter handling
	- Enhanced CLI `Parameters.run` to support passing a project location directly, streamlining old and new modes for project handling.
	- Reorganized CLI command structure by encapsulating sub-commands (`start`, ` stats`, `translate`, `align`) into dedicated classes.
	- Simplified method calls by adopting `Objects.requireNonNullElse` for project location handling.
	- Extracted common test setup logic into a helper method to reduce duplication in `ConsoleTranslationTest`.

Signed-off-by: Hiroshi Miura <miurahr@linux.com>

# Conflicts:
#	gradle/libs.versions.toml
#	src/org/omegat/Main.java
#	src/org/omegat/core/Core.java
#	test/src/org/omegat/core/data/AutoTmxTest.java